fixed the style to macth the psd and added clickable links to be highlighted

--- a/Spokeo/layout.html
+++ b/Spokeo/layout.html
@@ -12,7 +12,7 @@
 </head>
 <body class="bgGray">
   <hr class="divider absolute hide"/>
-  <div class="select-menu-option-mobile js-dropdown-menu-mobile hide">
+  <div class="select-menu-option-mobile js-dropdown-menu-mobile hide large-font">
     <ul class="no-list-style">
       <li><a href="#" class="no-text-style darkblue">Account</a></li>
       <li><a href="#" class="no-text-style darkblue">Link 1</a></li>
@@ -28,7 +28,7 @@
           <div class="search-wrapper">
             <div class="small-font search-tabs">
               <ul class="no-list-style nav-menu">
-                <li class="left"><a href="#NAME" class="no-text-style txBlack">NAME</a></li>
+                <li class="left"><a href="#NAME" class="no-text-style gray active">NAME</a></li>
                 <li class="left"><a href="#EMAIL" class="no-text-style gray">EMAIL</a></li>
                 <li class="left"><a href="#PHONE" class="no-text-style gray">PHONE</a></li>
                 <li class="left"><a href="#USERNAME" class="no-text-style gray">USERNAME</a></li>
@@ -65,17 +65,17 @@
           </div>
         </div>
       </div>
-      <div class="small-column absolute main">
+      <div class="small-column absolute main large-font">
         <div class="column-header icon toc_icon bg darkblue bbox radius-top-4">
-          Table of Content
+          <span class="header-text">Table of Contents</span>
         </div>
         <div class="radius-bottom-4 full-border column-content">
         </div>
       </div>
-      <div class="large-column absolute main">
+      <div class="large-column absolute main large-font">
         <div class="result">
           <div class="results icon email_icon column-header bg darkblue bbox radius-top-4 top-half-border">
-            Results
+            <span class="header-text">Results</span>
           </div>
           <div class="column-content radius-bottom-4 full-border txBlack">
             Panel Contents
@@ -111,7 +111,7 @@
   <script type="text/javascript" src="js/app.js"></script>
   <script type="text/javascript" charset="utf-8">
     $(document).ready(function(){
-      $.speoko.menu.init();
+      $.spokeo.menu.init();
     });
   </script>
 
