--- a/Spokeo/layout.html
+++ b/Spokeo/layout.html
@@ -4,13 +4,13 @@
   <!-- [if !IE]>
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:600,400,700,300' rel='stylesheet' type='text/css' />
   <![endif]-->
-  <link href='css/styles.css' rel='stylesheet' type='text/css' />
-  <link href="css/responsive-width.css" rel='stylesheet' type='text/css' />
+  <link href="static-assets/style.production.min.css" rel='stylesheet' type='text/css' />
   <!-- [if IE 9]>
   <link href="css/ie9.css" rel='stylesheet' type='text/css' />
   <![endif]-->
 </head>
 <body class="bgGray">
+  <!-- Start here For mobile -->
   <hr class="divider absolute hide"/>
   <div class="select-menu-option-mobile js-dropdown-menu-mobile hide large-font">
     <ul class="no-list-style">
@@ -20,6 +20,7 @@
       <li><a href="#" class="no-text-style darkblue">Link 3</a></li>
     </ul>
   </div>
+  <!-- End here For mobile -->
   <div class="main-wrapper">
     <div class="container bbox">
       <a class="logo small-column icon" id='logo' href="#"></a>
@@ -59,9 +60,12 @@
                 </div>
               </div>
             </div>
+
+            <!-- Start here For mobile -->
             <div class="select-menu-wrapper-mini absolute hide">
               <a href="#" class="icon menu_icon no-text-style gray dropdown-mini js-dropdown-mobile"></a>
             </div>
+            <!-- End here For mobile -->
           </div>
         </div>
       </div>
@@ -107,8 +111,7 @@
     </div>
   </div>
 
-  <script type="text/javascript" src="js/jquery-1.10.2.min.js"></script>
-  <script type="text/javascript" src="js/app.js"></script>
+  <script type="text/javascript" src="static-assets/app.production.min.js"></script>
   <script type="text/javascript" charset="utf-8">
     $(document).ready(function(){
       $.spokeo.menu.init();
