added ie css for production code

--- a/Spokeo/layout.html
+++ b/Spokeo/layout.html
@@ -6,7 +6,7 @@
   <![endif]-->
   <link href="static-assets/style.production.min.css" rel='stylesheet' type='text/css' />
   <!-- [if IE 9]>
-  <link href="css/ie9.css" rel='stylesheet' type='text/css' />
+  <link href="static-assets/ie9.css" rel='stylesheet' type='text/css' />
   <![endif]-->
 </head>
 <body class="bgGray">
@@ -24,6 +24,7 @@
   <div class="main-wrapper">
     <div class="container bbox">
       <a class="logo small-column icon" id='logo' href="#"></a>
+      <!-- Header -->
       <div class="bbox header absolute" id="header">
         <div class="large-column search-content">
           <div class="search-wrapper">
@@ -69,6 +70,8 @@
           </div>
         </div>
       </div>
+
+      <!-- Main left column -->
       <div class="small-column absolute main large-font">
         <div class="column-header icon toc_icon bg darkblue bbox radius-top-4">
           <span class="header-text">Table of Contents</span>
@@ -76,6 +79,8 @@
         <div class="radius-bottom-4 full-border column-content">
         </div>
       </div>
+
+      <!-- Main right column -->
       <div class="large-column absolute main large-font">
         <div class="result">
           <div class="results icon email_icon column-header bg darkblue bbox radius-top-4 top-half-border">
@@ -86,6 +91,8 @@
           </div>
         </div>
       </div>
+
+      <!-- Footer -->
       <div class="bbox footer absolute">
         <div class="small-column gray small-font left copyright">
           &copy; 2013 Spokeo People Search
